Ajustando integração com pagamento